--- a/tEST/Views/Home/Index.cshtml
+++ b/tEST/Views/Home/Index.cshtml
@@ -29,6 +29,11 @@
         .carousel {
             position: center;
         }
+        .homeButton {
+        
+            display:inline;
+        
+        }
         
         
         nav {
@@ -126,7 +131,8 @@
                             <br />
                             <input type="button" style="background-color:#476cac; width:550px; height:250px;" value="Comtec" onclick="window.location.href='https://www.comtecdirect.co.uk/'" />
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <input type="button" style="background-color:#476cac; width: 550px; height:250px;" value="Sign Up" onclick="window.location.href='https://www.comtecdirect.co.uk/'" />
+                            <input type="button" style="background-color:#476cac; width: 550px; height:250px;" value="PrizeDraw" runat="server" onserverclick="PrizeDraw()" />
+                            <!--<button id="PrizeDraw"  style="background-color:#476cac; width: 550px; height:250px;" name="PrizeDraw" onclick="PrizeDraw()" value="Prize Draw"/>-->
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <input type="button" style="background-color:#476cac; width: 550px; height:250px;" value="Product Catalog" onclick="window.location.href='https://www.comtecdirect.co.uk/'" />
                         </form>
