--- a/tEST/Views/Home/SaveDetails.cshtml
+++ b/tEST/Views/Home/SaveDetails.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Save Details";
+    ViewData["title"] = "Save Details";
 }
+
 <div class="row">
 
     <div class="col-md-3">
-        <h2>Thank you for submitting your details!</h2>
+        <h2>@ViewData["Message"]</h2>
         <ul>
             <content>
                 <br />
