--- a/tEST/Views/Home/SignUp.cshtml
+++ b/tEST/Views/Home/SignUp.cshtml
@@ -118,76 +118,76 @@
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Fibre Optic Cabling
-                                                    <input type="checkbox" name="B" runat="server" />
+                                                    <input type="checkbox" name="B" runat="server" value="true"/>
                                                     <label for="B"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Trunking & Cable Management
-                                                    <input type="checkbox" name="C" runat="server" />
+                                                    <input type="checkbox" name="C" runat="server" value="true" />
                                                     <label for="C"></label>
                                                 </div>
                                                 <br />
                                                 <div class="checkSetOne">
                                                     Voice Cabling
-                                                    <input type="checkbox" name="D" runat="server" />
+                                                    <input type="checkbox" name="D" runat="server" value="true"/>
                                                     <label for="D"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Cabinets & Accessories
-                                                    <input type="checkbox" name="E" runat="server" />
+                                                    <input type="checkbox" name="E" runat="server"value="true" />
                                                     <label for="E"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Active Equipment
-                                                    <input type="checkbox" name="F" runat="server" />
+                                                    <input type="checkbox" name="F" runat="server"value="true" />
                                                     <label for="F"></label>
                                                 </div>
                                                 <br />
                                                 <div class="checkSetOne">
                                                     Tools
-                                                    <input type="checkbox" name="G" runat="server" />
+                                                    <input type="checkbox" name="G" runat="server" value="true"/>
                                                     <label for="G"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Site Equipment
-                                                    <input type="checkbox" name="H" runat="server" />
+                                                    <input type="checkbox" name="H" runat="server" value="true"/>
                                                     <label for="H"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Fixings & Fastenings
-                                                    <input type="checkbox" name="I" runat="server" />
+                                                    <input type="checkbox" name="I" runat="server" value="true"/>
                                                     <label for="I"></label>
                                                 </div>
                                                 <br />
                                                 <div class="checkSetOne">
                                                     Labelling Solutions
-                                                    <input type="checkbox" name="J" runat="server" />
+                                                    <input type="checkbox" name="J" runat="server" value="true"/>
                                                     <label for="J"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     External Cabling
-                                                    <input type="checkbox" name="K" runat="server" />
+                                                    <input type="checkbox" name="K" runat="server" value="true"/>
                                                     <label for="K"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Telephony
-                                                    <input type="checkbox" name="L" runat="server" />
+                                                    <input type="checkbox" name="L" runat="server" value="true"/>
                                                     <label for="L"></label>
                                                 </div>
                                                 <br />
                                                 <div class="checkSetOne">
                                                     Test & Measurement
-                                                    <input type="checkbox" name="M" runat="server" />
+                                                    <input type="checkbox" name="M" runat="server" value="true"/>
                                                     <label for="M"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Power, Cabling & Accessories
-                                                    <input type="checkbox" name="N" runat="server" />
+                                                    <input type="checkbox" name="N" runat="server" value="true"/>
                                                     <label for="N"></label>
                                                 </div>
                                                 <div class="checkSetOne">
                                                     Audio Visual & Coax
-                                                    <input type="checkbox" name="O" runat="server" />
+                                                    <input type="checkbox" name="O" runat="server" value="true"/>
                                                     <label for="O"></label>
                                                 </div>
                                             </fieldset>
@@ -196,7 +196,7 @@
                                             <br />
                                             <br />
                                             <text style="font-size:20px;">Would you like to be entered into our prize draw?</text>
-                                            <input type="checkbox" name="prizeDraw" />
+                                            <input type="checkbox" name="prizeDraw"  runat="server" value="true" />
                                         </content>
 
 
