--- a/tEST/Views/Shared/_Layout.cshtml
+++ b/tEST/Views/Shared/_Layout.cshtml
@@ -31,11 +31,17 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="AboutComtec">About Comtec</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="PrizeDraw">Prize Draw</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="SignUp">Sign Up</a></li>
-                   <!--<li><a asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>-->
+                    <!--<li><a asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>-->
                 </ul>
+                <div class="nav navbar-nav navbar-right navbar-collapse collapse">
+                    <ul>
+                        <li style="margin-right:35px; color:dimgrey; margin-top:13px; "><a asp-area="" asp-controller="Home" asp-action="AboutComtec">About Comtec</a></li>
+                    </ul>
+                </div>
             </div>
+            
         </div>
     </nav>
     <div class="container body-content">
